--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/index.js",
     "lint": "eslint src/",
     "docker:build": "docker build -t base-health-check .",
-    "docker:run": "docker run -p 8080:8080 base-health-check"
+    "docker:run": "docker run -p 8080:8080 base-health-check",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
     "optimism",
